compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/classPropertyInConstructor.kt
// FIR_IDENTICAL

class C(<!CONFLICTING_JVM_DECLARATIONS!>val x: Int<!>) {
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX() = 1<!>
}
